--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-webview": "13.13.5",
     "expo-file-system": "~18.1.11",
     "expo-media-library": "~17.1.7",
-    "expo-sharing": "~13.1.5"
+    "expo-sharing": "~13.1.5",
+    "expo-print": "~14.1.4",
+    "expo-image-manipulator": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
